<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gui"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@android:color/white"

        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:hint="@string/enter_first_name"
        android:textColorHint="@android:color/white"
        android:inputType="textCapSentences"
        android:drawableStart="@drawable/ic_account_box_white"
        android:textColor="@android:color/white"
        />



    <EditText
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:layout_alignParentEnd="true"
        android:hint="@string/enter_surname"
        android:textColorHint="@android:color/white"
        android:inputType="textCapSentences"
        android:textColor="@android:color/white"
        />
    <EditText
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:hint="@string/enter_email_address"
        android:textColorHint="@android:color/white"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email_white"
        android:textColor="@android:color/white"
        />


    <EditText
        android:id="@+id/birthday"
        android:drawableStart="@drawable/ic_date_range_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/email_address"
        android:hint="@string/enter_your_date_of_birth"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        />
    <EditText
        android:id="@+id/phone"
        android:drawableStart="@drawable/ic_local_phone_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthday"
        android:ems="10"
        android:hint="@string/enter_phone_number"
        android:textColorHint="@android:color/white"
        android:inputType="phone"
        android:textColor="@android:color/white"
        />
    <Spinner
        android:id="@+id/phone_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthday"
        android:layout_toEndOf="@id/phone"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/password"
        android:drawableStart="@drawable/ic_security_white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:hint="@string/enter_password"
        android:textColorHint="@android:color/white"
        android:inputType="textPassword"
        android:ems="10"
        android:textColor="@android:color/white"

        />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone"
        android:hint="@string/confirm_password"
        android:textColorHint="@android:color/white"
        android:inputType="textPassword"

        android:textColor="@android:color/white"
        android:layout_alignParentEnd="true"

        />


    <CheckBox
        android:id="@+id/conditions"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:text="@string/terms_and_conditions"
        android:checked="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"
        android:onClick="showToast"

        />

    <Button
        android:layout_width = "200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/conditions"
        android:textAllCaps="false"
        android:text="@string/create_account"
        android:layout_marginTop="50dp"
        android:textColor="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:onClick="createAccount"
        />

</RelativeLayout>